# zfs-snappy

./: README.markdown  configure.ac  zfs-script-config.sh.in
include/: snappy.h
include/sys/: zio.h  zio_compress.h
lib/: Makefile.am
lib/libsnappy/: Makefile.am
lib/libzpool/: Makefile.am
module/: Makefile.in
module/snappy/: Makefile.in  snappy.c
module/zcommon/: zfs_prop.c
module/zfs/: Makefile.in  snappy.c  zio_compress.c
scripts/: common.sh.in
